# lazy-pdb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ldb.py  pyproject.toml  test_output.py
example_scripts/: generic_example.py  long_running_example.py
src/: app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
src/lazy_pdb/: __init__.py  __main__.py  debugger.py  output_capture.py
src/lazy_pdb/tui/: __init__.py  app.py  debugger.tcss
src/lazy_pdb/tui/widgets/: __init__.py  code_viewer.py  frame_viewer.py  output_viewer.py  variable_viewer.py
tests/: __init__.py
