[package]
name = "lazy-pdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
serde = { version = "1.0.194", features = ["derive"] }
xml-rpc = "0.0.12"
